# cppsandbox

./: .gitignore  .gitmodules  README.md
root/: CMakeLists.txt  add_git_submodules.bat  build_all_debug.bat  build_all_release.bat  build_debug.bat  build_release.bat  create_vs_project.bat
root/cmake/: AddApp.cmake  AddModule.cmake
root/code/app/: CMakeLists.txt
root/code/app/include/: application.h
root/code/app/source/: application.cpp  main.cpp
root/code/dataflow/: CMakeLists.txt
root/code/dataflow/include/dataflow/: base_node.h  client_bus_relay.h  component.h  emitter_components.h  legacy_node.h  message.h  message_bus.h  movingaverage.h  network_factory.h  network_node.h  network_pipe.h  node.h  node_examples.h  node_input.h  node_output.h  publisher.h  receiver_components.h  serdes.h  subscriber.h  topic.h  topic_inspector.h  types.h
root/code/dataflow/source/: client_bus_relay.cpp  message_bus.cpp  network_factory.cpp  network_pipe.cpp  serdes.cpp
root/code/datastructs/: CMakeLists.txt
root/code/datastructs/include/datastructs/: movingaverage.h
root/code/local/runtime/: CMakeLists.txt
root/code/local/runtime/profiler/include/: profiler.h
root/code/local/runtime/profiler/source/: profiler.cpp
root/code/local/runtime/shared/include/: buildconfig.h  types.h
root/code/local/tests/: CMakeLists.txt
root/code/local/tests/consumer_producer/include/: message.h  message_bus.h  message_queue.h  test_consumer_producer.h
root/code/local/tests/consumer_producer/source/: consumer_producer.cpp  test_consumer_producer.cpp
root/code/local/tests/product_except_self/include/: test_product.h
root/code/local/tests/product_except_self/source/: test_product.cpp
root/code/shared/: CMakeLists.txt
root/code/shared/include/: buildconfig.h  console_frame_printer.h  helpers.h  malloc_tracker.h  profiler.h
root/code/shared/source/: profiler.cpp
root/code/stdexio/: CMakeLists.txt
root/code/stdexio/include/stdexio/: event_handler.h  event_loop.h
root/code/stdexio/source/: event_handler.cpp  event_loop.cpp
root/code/tests/: CMakeLists.txt
root/code/tests/consumer_producer/include/: message.h  message_bus.h  message_queue.h
root/code/tests/consumer_producer/source/: main.cpp  message_bus.cpp
root/code/tests/product_except_self/source/: main.cpp
root/code/tests/test_consumer_producer/include/: message.h  message_bus.h  message_queue.h
root/code/tests/test_consumer_producer/source/: main.cpp
root/code/tests/test_custom_matrix/include/: matrix.h
root/code/tests/test_custom_matrix/source/: main.cpp
root/code/tests/test_dataflow_client/source/: main.cpp
root/code/tests/test_dataflow_ipc/source/: main.cpp
root/code/tests/test_dataflow_ipc_node/source/: main.cpp
root/code/tests/test_dataflow_ipc_node_1/source/: main.cpp
root/code/tests/test_dataflow_ipc_node_1/test_dataflow_serdes/include/: build_config.h
root/code/tests/test_dataflow_ipc_node_2/source/: main.cpp
root/code/tests/test_dataflow_ipc_node_legacy/source/: main.cpp
root/code/tests/test_dataflow_observer/include/: build_config.h
root/code/tests/test_dataflow_observer/source/: main.cpp
root/code/tests/test_dataflow_observer_base/source/: main.cpp
root/code/tests/test_dataflow_observer_io/: CMakeLists.txt
root/code/tests/test_dataflow_observer_io/source/: main.cpp
root/code/tests/test_dataflow_observer_stdexec/source/: main.cpp
root/code/tests/test_dataflow_serdes/source/: main.cpp
root/code/tests/test_dataflow_server/: CMakeLists.txt
root/code/tests/test_dataflow_server/source/: main.cpp
root/code/tests/test_design_patterns/include/: design_patterns.h  factory.h
root/code/tests/test_design_patterns/source/: design_patterns.cpp  main.cpp
root/code/tests/test_filics_2/include/: matrix.h
root/code/tests/test_observer_n_to_n/include/: build_config.h  component.h  emitter.h  emitter_components.h  emitter_nodes.h  message.h  message_bus.h  node.h  node_examples.h  node_input.h  node_output.h  publisher.h  receiver.h  receiver_components.h  receiver_nodes.h  subscriber.h  topic.h  topic_inspector.h
root/code/tests/test_observer_n_to_n/source/: main.cpp  message_bus.cpp
root/code/tests/test_product_except_self/source/: main.cpp
root/code/tests/test_system_design/include/: system_design.h
root/code/tests/test_system_design/source/: main.cpp
root/code/tests/test_wsa_client/: CMakeLists.txt
root/code/tests/test_wsa_client/include/: wsa_client.h
root/code/tests/test_wsa_client/source/: main.cpp
root/code/tests/test_wsa_server/include/: stdafx.h  wsa_networking.h  wsa_server.h
root/code/tests/test_wsa_server/source/: main.cpp  wsa_server.cpp
root/code/wsanet/: CMakeLists.txt
root/code/wsanet/include/wsanet/: wsa_client.h  wsa_common.h  wsa_endpoint.h  wsa_handler.h  wsa_helpers.h  wsa_server.h
root/code/wsanet/source/: wsa_client.cpp  wsa_endpoint.cpp  wsa_server.cpp
root/project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CppSandbox.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
root/project/code/app/: CppSandbox.vcxproj  CppSandbox.vcxproj.filters  cmake_install.cmake
root/project/code/local/runtime/: cmake_install.cmake  profiler.vcxproj  profiler.vcxproj.filters  profiler_obj.vcxproj  profiler_obj.vcxproj.filters  runtime.vcxproj  runtime.vcxproj.filters
root/project/code/local/tests/: cmake_install.cmake  consumer_producer.vcxproj  consumer_producer.vcxproj.filters  consumer_producer_obj.vcxproj  consumer_producer_obj.vcxproj.filters  product_except_self.vcxproj  product_except_self.vcxproj.filters  product_except_self_obj.vcxproj  product_except_self_obj.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
root/project/code/shared/: cmake_install.cmake  shared.vcxproj  shared.vcxproj.filters
root/project/code/shared/Debug/: shared.lib
root/project/code/tests/: cmake_install.cmake  consumer_producer.vcxproj  consumer_producer.vcxproj.filters  product_except_self.vcxproj  product_except_self.vcxproj.filters
root/project/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+3 files in other folders)
